tests/backend/checkmach/fail4.output
File "fail4.ml", line 2, characters 5-15:
Error (warning 197 [check-failed]): Annotation check for zero_alloc strict failed on function Fail4.test (camlFail4__test_HIDE_STAMP)
